JIRA BLADE-572 - Fixed styling of homepage banner titles to ensure it doesn't overflow the banner width.

--- a/trunk/02. Clients/Blade/less/common/banner.less
+++ b/trunk/02. Clients/Blade/less/common/banner.less
@@ -67,11 +67,11 @@
 		}
 
 		.sub-title span {
-			margin-bottom: 0; 
+			margin-bottom: 0;
 			//background: none;
 			text-transform: none;
 			//color: @homepage__banner-sub-title--colour;
-			font-family: @homepage__banner-sub-title--font; 
+			font-family: @homepage__banner-sub-title--font;
 			//background: rgba(255, 255, 255, 0.6);
 			.font-size(@homepage__banner-sub-title--font-size);
 
@@ -332,6 +332,7 @@
 	                    max-width: none;
 	                    color: #fff;
 	                    padding: 0;
+	                    width: auto;
 	                    .font-size(22) !important;
 	                }
 
